<resources>
    <string name="app_name">Mix Up</string>

    <!-- Nav drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MixUp!</string>
    <string name="nav_header_subtitle">v1.0</string>
    <string name="nav_header_desc">Navigation header app logo</string>
    <string name="action_settings">Settings</string>
    <string name="menu_mix_up">MixUp!</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_more_apps">More by developer</string>
    <string name="action_start_over">Start over</string>
    <string name="action_share">Share</string>

    <string name="more_apps_page_header">Check out these apps by Gerard…</string>
    <string name="mater_title">Mater</string>
    <string name="mater_description">Your recipe and shopping mate</string>
    <string name="mater_image_content_description">Mater app logo</string>
    <string name="mater_url">https://play.google.com/store/apps/details?id=com.gerardbradshaw.mater</string>
    <string name="content_description_frame">Layout option</string>
    <string name="frame">Frame</string>
    <string name="aspect">Aspect</string>
    <string name="border">Border</string>
    <string name="action_save_to_gallery">Save to gallery</string>
    <string name="color">Color</string>
    <string name="shade">Shade</string>
    <string name="tint">Tint</string>
</resources>