<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/app_image_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/mater_image_content_description"
                tools:src="@drawable/img_mater_logo" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            tools:text="@string/mater_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/app_description"
            app:layout_constraintStart_toEndOf="@id/app_image_card"
            app:layout_constraintTop_toTopOf="@id/app_image_card" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            tools:text="@string/mater_description"
            app:layout_constraintBottom_toBottomOf="@id/app_image_card"
            app:layout_constraintStart_toStartOf="@id/app_title"
            app:layout_constraintTop_toBottomOf="@id/app_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>