<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moreapps.MoreAppsFragment">

    <TextView
        android:id="@+id/page_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/more_apps_page_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_header">

        <ImageView
            android:id="@+id/mater_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/mater_image_content_description"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mater_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/mater_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/mater_tagline"
            app:layout_constraintStart_toEndOf="@id/mater_image"
            app:layout_constraintTop_toTopOf="@id/mater_image" />

        <TextView
            android:id="@+id/mater_tagline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:text="@string/mater_tagline"
            app:layout_constraintBottom_toBottomOf="@id/mater_image"
            app:layout_constraintStart_toStartOf="@id/mater_title"
            app:layout_constraintTop_toBottomOf="@id/mater_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>